--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -11,7 +11,7 @@
             <p>회원 기능</p>
             <p>
                 <a href="/member/new">회원가입</a>
-                <a href="/members">회원목록</a>
+                <a href="/members">회원목록aa</a>
             </p>
         </div>
     </div>
