--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -10,8 +10,8 @@
             <h1>Hello Spring</h1>
             <p>회원 기능</p>
             <p>
-                <a href="/member/new">회원가입</a>
-                <a href="/members">회원목록aa</a>
+                <a href="/members/new">회원가입</a>
+                <a href="/members">회원목록</a>
             </p>
         </div>
     </div>
