--- a/src/main/resources/templates/members/createMemberForm.html
+++ b/src/main/resources/templates/members/createMemberForm.html
@@ -4,12 +4,28 @@
 <div class="container">
     <form action="/members/new" method="post">
         <div class="form-group">
-            <label for="name">이름</label>
-            <input type="text" id="name" name="name" placeholder="이름을입력하세요">
-            <input type="text" id="id" name="id" placeholder="사용할 아이디를 입력하세요">
-            <input type="password" id="password" name="password" placeholder="비밀번호를 입력하세요">
-            <input type="text" id="country" name="country" placeholder="지역을 입력하세요">
-            <input type="text" id="email" name="email" placeholder="이메일을입력하세요">
+            <table>
+                <tr>
+                    <th><label for="name">이름</label></th>
+                    <th><input type="text" id="name" name="name" placeholder="이름을입력하세요"></th>
+                </tr>
+                <tr>
+                    <th><label for="name">아이디</label></th>
+                    <th><input type="text" id="id" name="id" placeholder="사용할 아이디를 입력하세요"></th>
+                </tr>
+                <tr>
+                    <th><label for="name">패스워드</label></th>
+                    <th><input type="password" id="password" name="password" placeholder="비밀번호를 입력하세요"></th>
+                </tr>
+                <tr>
+                    <th><label for="name">지역</label></th>
+                    <th><input type="text" id="country" name="country" placeholder="지역을 입력하세요"></th>
+                </tr>
+                <tr>
+                    <th><label for="name">이메일</label></th>
+                    <th><input type="text" id="email" name="email" placeholder="이메일을입력하세요"></th>
+                </tr>
+            </table>
         </div>
         <button type="submit">등록</button>
     </form>
